web-infras/parser/tests/fixtures/babel/es2017/async-functions/await-inside-parameters/output.txt
[SyntaxError]: await expression can not used in parameter list (1,23)
1|async function fn(x = await 2) {}
 |                     ^
